syntax = "proto3";

package com.corporatebanking.userservice;

option java_multiple_files = true;
option java_package = "com.corporatebanking.userservice.grpc";
option java_outer_classname = "UserServiceProto";

// User Service
service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
}

// Request/Response Messages
message CreateUserRequest {
  string email = 1;
  string firstName = 2;
  string lastName = 3;
  string phoneNumber = 4;
  string role = 5;
}

message GetUserRequest {
  string userId = 1;
}

message UpdateUserRequest {
  string userId = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string phoneNumber = 5;
  string role = 6;
}

message DeleteUserRequest {
  string userId = 1;
}

message ListUsersRequest {
  int32 page = 1;
  int32 pageSize = 2;
}

message UserResponse {
  string userId = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string phoneNumber = 5;
  string role = 6;
  string createdAt = 7;
  string updatedAt = 8;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

message ListUsersResponse {
  repeated UserResponse users = 1;
  int32 totalCount = 2;
  int32 page = 3;
  int32 pageSize = 4;
}

